# solana-nft-metadata

metaplex/test/: Cargo.toml
token-metadata/: Cargo.toml
token-metadata/cli/: Cargo.toml
token-metadata/program/: Cargo.toml
token-metadata/program/src/: deprecated_instruction.rs  instruction.rs  state.rs
token-vault/program/: Cargo.toml
token-vault/test/: Cargo.toml
