cargo-features = ["edition2021"]
[package]
name = "mpl-token-metadata"
version = "1.2.5"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"


[features]
no-entrypoint = []
test-bpf = []
serde-traits = ["serde", "serde_with"]

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
solana-program = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
mpl-token-vault = { version = "~0.1.0", features = [ "no-entrypoint" ] }
spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
shank = { version = "~0.0.1" }
serde = { version = "~1.0.136", optional = true }
serde_with = { version = "~1.14.0", optional = true }

[dev-dependencies]
solana-sdk = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }
solana-program-test = { git = "https://github.com/omertxyz/solana.git", rev = "03a3b241622b6248bb245c29baef538a88f04c0b" }

[lib]
crate-type = ["cdylib", "lib"]